# MeasurementsLFDQ

./: .gitignore  16abr2024measure.ipynb  16out2023 testing.ipynb  9fev2024 testing.ipynb  AWG.ipynb  MeasurementExample.ipynb  PulseGeneratorExample.ipynb  fluxsweep_notebook_example.ipynb  fluxsweep_parameters_example.toml  powersweep_notebook_example.ipynb  powersweep_parameters_example.toml  powersweep_twotone_notebook_example.ipynb  powersweep_twotone_parameters_example.toml  pyproject.toml  twotone_parameters.toml  twotone_parameters_example.toml  vna_parameters_example.toml
spinner/codigos/: codigo_arduino.ino
src/: dump.py
src/instruments/: ATS9872_driver.py  Agilent11713C_driver.py  DG645_driver.py  DSOS604A_driver.py  DataChannelManager.py  E5063A_driver.py  E5080B_driver.py  E8257D_driver.py  ERASynth_driver.py  M8195A_driver.py  MeasurementSystem.py  Pulse.py  PulseSequence.py  SCPI_socket.py  SGS100A_driver.py  SIM928_driver.py  SIM970_driver.py  VisaInstrument.py  pulse_generator.py
src/measurements/: Basics.py  DataChannelManager.py  MeasurementSetup.py  Pulse.py  PulseSequence.py  T1.py  T1_map.py  echo.py  fluxsweep.py  fluxsweep_pulse.py  powersweep.py  powersweep_pulse.py  powersweep_twotone.py  rabi.py  rabi_map.py  ramsey.py  sweep_pulse.py  twotone.py  twotone_pulse.py  vna.py
src/measurements/waveforms/: DragPulse.py  GaussianPulse.py  Pulse.py  SquareGaussianPulse.py  SquarePulse.py  (+2 more)
src/old_measurements/: T1_map.py  fluxsweep_pulse.py  powersweep.py  powersweep_pulse.py  rabi.py  ramsey_map.py  sweep_pulse.py  twotone.py  twotone_pulse.py
