[project]
name = "MeasurementLFDQ"
version = "0.2.0"
dependencies = [
    "numpy",
    "matplotlib",
    "pyvisa",
    "IPython",
    "toml",
    "serial",
    'jupyterlab',
]

[tool.setuptools.packages.find]
where = ['src']
include = ["measurements",'instruments']  # ["*"] by default
namespaces = false

[project.scripts]
powersweep = "measurements.powersweep:main"
fluxsweep = "measurements.fluxsweep:main"
twotone = "measurements.twotone:main"
powersweep_twotone = "measurements.powersweep_twotone:main"
vna = "measurements.vna:main"